to fix review count